--- a/ejercicio03.html
+++ b/ejercicio03.html
@@ -8,7 +8,7 @@
     <h1 id="encabezado">DOM en JavaScript. Añadir elemento </h1>
     <div class="lista">
       <p class="description">Cosas que son violeta:</p>
-      <ul>
+      <ul id="lista">
         <li>ciruelas</li>
         <li>amatista</li>
         <li>lavanda</li>
