--- a/ejercicio02.html
+++ b/ejercicio02.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="css/inverso.css">
   </head>
   <body>   
-    <p>parrafo 1.</p>
-    <p>parrafo 2.</p>
-    <p>parrafo 3</p>
-    <p>parrafo 4</p>
+    <p class="inverso">parrafo 1.</p>
+    <p class="inverso">parrafo 2.</p>
+    <p class="inverso">parrafo 3</p>
+    <p class="inverso">parrafo 4</p>
     <button type="button" id="boton">fondo oscuro</button>
     <script type="text/javascript" src="js/ejercicio02.js"></script>
   </body>
