--- a/ejercicio02.html
+++ b/ejercicio02.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="css/inverso.css">
   </head>
   <body>   
-    <p class="inverso">parrafo 1.</p>
-    <p class="inverso">parrafo 2.</p>
-    <p class="inverso">parrafo 3</p>
-    <p class="inverso">parrafo 4</p>
-    <button type="button" id="boton">fondo oscuro</button>
+    <div>
+      <p>parrafo 1.</p>
+      <p>parrafo 2.</p>
+      <p>parrafo 3</p>
+      <p>parrafo 4</p>
+      <button type="button" id="boton">fondo oscuro</button>
+    </div>
     <script type="text/javascript" src="js/ejercicio02.js"></script>
   </body>
 </html>
