--- a/ejercicio06.html
+++ b/ejercicio06.html
@@ -12,7 +12,7 @@
       <p class="description">COSAS QUE SON VIOLETAS:</p>
       <input type="text" class="description">
       <button class="description">Cambiar la descripcion de la lista</button>
-      <ul>
+      <ul id="lista">
         <li>ciruelas</li>
         <li>amatista</li>
         <li>lavanda</li>
